--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,16 @@
 [versions]
 agp = "8.5.0"
+androidxAppcompat = "1.3.1"
 androidxMaterial = "1.6.8"
 appcompatVersion = "1.6.1"
+constraintlayoutVersion = "2.1.0"
 coreKtxVersion = "1.8.0"
+databindingRuntime = "8.5.1"
+datastorePreferences = "1.1.1"
+fragment = "1.8.1"
 glide = "4.16.0"
 googleMaterial = "1.5.0"
+googleMaterialVersion = "1.4.0"
 gradle = "8.0.2"
 hiltAndroid = "2.50"
 hiltCompiler = "1.2.0"
@@ -23,18 +29,26 @@ constraintlayout = "2.1.4"
 materialVersion = "1.6.0"
 navigationFragmentKtx = "22"
 navigationUiKtx = "3"
-picasso = "2.8"
+picasso = "2.7"
+picassoVersion = "2.7"
 recyclerview = "1.3.2"
 retrofit = "2.9.0"
 roundedimageview = "2.3.0"
 shimmer = "0.5.0"
 navigationFragment = "2.7.7"
 pagingCommonAndroid = "3.3.0"
+squareupPicasso = "2.71828"
 
 [libraries]
+androidx-appcompat-v131 = { module = "androidx.appcompat:appcompat", version.ref = "androidxAppcompat" }
 androidx-appcompat-v161 = { module = "androidx.appcompat:appcompat", version.ref = "appcompatVersion" }
+androidx-constraintlayout-v210 = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayoutVersion" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-core-ktx-v180 = { module = "androidx.core:core-ktx", version.ref = "coreKtxVersion" }
+androidx-databinding-runtime = { module = "androidx.databinding:databinding-runtime", version.ref = "databindingRuntime" }
+androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
+androidx-fragment = { module = "androidx.fragment:fragment", version.ref = "fragment" }
+androidx-fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "fragment" }
 androidx-hilt-compiler = { module = "androidx.hilt:hilt-compiler", version.ref = "hiltCompiler" }
 androidx-lifecycle-livedata-ktx = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "lifecycleLivedataKtx" }
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleLivedataKtx" }
@@ -60,14 +74,17 @@ logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", ver
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+material-v140 = { module = "com.google.android.material:material", version.ref = "googleMaterialVersion" }
 material-v150 = { module = "com.google.android.material:material", version.ref = "googleMaterial" }
 material-v160 = { module = "com.google.android.material:material", version.ref = "materialVersion" }
 picasso = { module = "implementation 'com.squareup.picasso:picasso", version.ref = "picasso" }
+picasso-v28 = { module = "implementation 'com.squareup.picasso:picasso", version.ref = "picassoVersion" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 roundedimageview = { module = "com.makeramen:roundedimageview", version.ref = "roundedimageview" }
 shimmer = { module = "com.facebook.shimmer:shimmer", version.ref = "shimmer" }
 androidx-navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigationFragment" }
 androidx-paging-common-android = { group = "androidx.paging", name = "paging-common-android", version.ref = "pagingCommonAndroid" }
+squareup-picasso = { module = "com.squareup.picasso:picasso", version.ref = "squareupPicasso" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
